aligned center && fixed colors

--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -63,8 +63,8 @@
 
 		}
 		p {
-			color: white;
-
+			@include brand-colors-text("color");
+			// color: white;
 		}
 		&,
 		a {
