--- a/src/scenes/CountryHome/components/widgets/TopCategoriesWidget.scss
+++ b/src/scenes/CountryHome/components/widgets/TopCategoriesWidget.scss
@@ -38,8 +38,10 @@
         display: grid;
         grid-template-columns: 10% 80% 10%;
         border-radius: 5px;
+        text-align: left;
         @media (min-width: $desktopBreakpoint) {
           grid-template-columns: 20% 70% 10%;
+          grid-template-rows: 0;
         }
         .icon {
           grid-column-start: 1;
